[FIX] web: searchpanel not fully visible
Before this commit, the searchpanel wasn't fully visible on large screens when
the Comparison feature is enabled.

Steps to reproduce:

- CRM > Reporting > Pipeline.
- Click on toggle button
- Minimize the window and resize it

Observed Behavior:
This was cause the columns were given 100% width on below medium screens which
activated the flex wrap only on medium screens.

Expected Behavior:

The columns of searchpanel get stacked with a scrollbar when a part of it isn't
visible.

After this commit, flex wrap gets activated whenever the width of searchpanel
gets larger than the  space available. So now the searchpanel will be visible
even if there are more  columns of columns with larger width.

Task: 3866695

--- a/addons/web/static/src/search/search_bar_menu/search_bar_menu.scss
+++ b/addons/web/static/src/search/search_bar_menu/search_bar_menu.scss
@@ -4,8 +4,11 @@
     $-menu-max-width: calc(100vw - #{map-get($spacers, 3) * 2 });
 
     max-width: $-menu-max-width;
+    width: auto;
+
     .o_dropdown_container {
         border-color: $dropdown-divider-bg !important;
+        width:auto;
     }
 
     @include media-breakpoint-up(lg) {
@@ -17,4 +20,6 @@
             max-width: calc(#{$-menu-max-width} / 4);
         }
     }
+
+    flex-wrap: wrap;
 }
